--- a/style.css
+++ b/style.css
@@ -2,39 +2,81 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+}
+body{
+    background-color: #0f172a;
 }
 form{
-    width: 100%;
     height: 800px;
-    background-color: #1e293b;
+    width: 100%;
+    background-color: #0f172a;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 .elements{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 550px;
+    background-color: #1e293b;
     width: 500px;
-    background-color: #334155;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px 20px 0 20px;
+    margin: 0 5px;
 }
 .elements h1{
-    font-family: sans-serif;
-    font-size: 20px;
-    font-weight: 400;
     color: #79ffed;
-    text-align: left;
+    font-size: 30px;
+    font-weight: 300;
+    margin-bottom: 10px;
 }
 .elements input{
-   margin: 10px 0;
-   padding: 10px 20px;
-   border-radius: 30px;
+   width: 95%;
+   height: 51px;
+   background-color: #334155;
+   margin-bottom: 10px;
    border: none;
-   outline-color: aqua;
-   background-color: #0f172a;
+   padding: 0 10px;
    color: #ffa500;
-   width: 400px;
+   font-weight: 300;
    font-size: 18px;
+   border-radius: 20px 20px 0 20px;
 }
+.elements textarea{
+    background-color: #0f172a;
+    width: 95%;
+    height: 100px;
+    border-radius: 20px 20px 0 20px;
+    color: #1c7ae1;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 200;
+    outline-color: #1c7ae1;
+}
+.elements button{
+    background-color: #334155;
+    color: #fff;
+    text-transform: capitalize;
+    border: none;
+    margin-top: 15px;
+    padding: 10px 20px;
+    font-size: 17px;
+    border-radius: 15px 0 15px 0;
+
+}
+.elements button:hover{
+    background-color: #1c7ae1;
+    transition: all 1s ease;
+}
+
+
+
+
+
+
+
+
+
+
